--- a/.gitignore
+++ b/.gitignore
@@ -396,6 +396,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+.idea/*
 .idea/.idea.Bee4.Pricing.Report/.idea/aws.xml
 .idea/.idea.Bee4.Pricing.Report/.idea/.name
 .idea/.idea.Bee4.Pricing.Report/.idea/encodings.xml
